--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     </style>
 </head>
 <body>
-    <p>66666666</p>
+    <frameset = %50>
+        <frame src="https://space.bilibili.com/100580703">
+    </frameset>
 </body>
 </html>
