--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <frameset = %50>
-        <frame src="https://space.bilibili.com/100580703">
+        <frame url="https://space.bilibili.com/100580703"/>
     </frameset>
 </body>
 </html>
