--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
             background: #BBFFEE no-repeat center scroll;
         }
         iframe{
-            height:100%;
-            width:100%;
+            height = 1920px;
+            width = 1080px;
         }
     </style>
 </head>
 <body>
-    <iframe src="https://space.bilibili.com/100580703"></iframe>
+    <iframe frameborder="0" src="https://space.bilibili.com/100580703"></iframe>
 </body>
 </html>
