--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
             background: #BBFFEE no-repeat center scroll;
         }
         iframe{
-            height = 1000px;
-            width = 1100px;
+            height:1000px;
+            width:1100px;
         }
     </style>
 </head>
