--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     </style>
 </head>
 <body>
-    <iframe frameborder="0" src="https://space.bilibili.com/100580703"></iframe>
+    <iframe frameborder="0" src="http://cet.neea.cn/cet/query_c.html"></iframe>
 </body>
 </html>
