--- a/index.html
+++ b/index.html
@@ -13,9 +13,32 @@
             height:1000px;
             width:1100px;
         }
+        #button1{
+            background-color: rgb(240, 109, 70);
+            color: white;
+            text-align: center;
+            border: none;
+            width: 200px;
+            height: 66px;
+            border-radius: 12px;
+            font-size: 20;
+        }
+        #button2{
+            background-color: rgb(238, 94, 161);
+            color: white;
+            text-align: center;
+            border: none;
+            width: 200px;
+            height: 66px;
+            border-radius: 12px;
+            margin-top: 12px;
+            font-size: 20px;
+        }
     </style>
 </head>
 <body>
-    <iframe frameborder="0" src="http://cet.neea.cn/cet/query_c.html"></iframe>
+    <button id="button1" onclick="location='http://cet.neea.cn/cet/query_c.html'">查询四六级成绩</button>
+    <br/>
+    <button id="button2" onclick="location='https://space.bilibili.com/100580703'">点进来看看</button>
 </body>
 </html>
